test/should_fail/cons.erl
-module(cons).

-export([f/0]).

-spec f() -> ok.
f() -> [x, y].
